<resources>
    <string name="app_name">My Wallpaper</string>
    <string name="label">My Open GL Live Wallpaper</string>
    <string name="title_activity_launch_live_wallpaper_chooser">LaunchLiveWallpaperChooserActivity
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="settings_activity_title">Settings</string>
    <string name="get_pro">Get Pro</string>

    //Preference Strings
    //remove layer
    <string name="remove_layer">Remove layer</string>
    <string name="remove_layer_summary">Remove the subject from the background</string>
    //change lighting
    <string name="set_time_title">Set Time of Day</string>
    //set Wallpaper
    <string name="set_wallpaper">Set Wallpaper</string>
    //go to artist's website
    <string name="texture_choice">Choose subject</string>
    <string name="girl_automatic">Automatic</string>
    <string name="girl_front_1">Girl Front 1</string>
    <string name="girl_front_2">Girl Front 2</string>
    <string name="girl_mid_1">Girl Middle 1</string>
    <string name="girl_mid_2">Girl Middle 2</string>
    <string name="girl_back_1">Girl Back 1</string>
    <string name="girl_back_2">Girl Back 2</string>
    //accelerometer scrolling
    <string name="sim_scrolling">3D parallax effect</string>
    <string name="sim_scrolling_summary">Control parallax effect with accelerometer</string>

    //camera blur
    <string name="setting_blur_section_title">Blur Settings</string>
    <string name="blur_enabled_key">blurEnabled</string>
    <string name="blur_enabled_title">Blurring Enabled</string>
    <string name="rack_focus_enabled_key">rackFocusEnabled</string>
    <string name="rack_focus_enabled_title">Rack Focus</string>

    <string name="blur_amount_key">blurAmount</string>
    <string name="blur_amount_title">Blur Intensity</string>
    <string name="blur_amount_max">10</string>
    <string name="blur_amount_default">5</string>

    <string name="blur_none">No camera blur</string>
    <string name="blur_low">Slight camera blur</string>
    <string name="blur_medium"></string>
    <string name="blur_high">Heavy camera blur</string>




    <string name="setting_zoom_camera_key">zoom_camera_key</string>
    <string name="zoom_camera_title">Camera Zoom</string>

    <string name="default_true">true</string>
    <string name="default_false">false</string>

    //screen and gyro movement settings
    <string name="camera_settings_section_title">Camera Settings</string>
    <string name="graphics_settings_section_title">Graphics Settings</string>
    <string name="weather_location_settings">Location and Weather Settings</string>

    <string name="motion_parallax_key">motion_parallax</string>
    <string name="motion_parallax_setting_title">Motion Parallax</string>
    <string name="motion_parallax_default">true</string>

    <string name="invert_motion_parallax_key">invert_motion_parallax</string>
    <string name="invert_motion_parallax_setting_title">Invert Motion Parallax</string>
    <string name="invert_motion_parallax_default">false</string>

    <string name="battery_saver_setting_key">battery_saver</string>
    <string name="battery_saver_setting_title">Battery Saver</string>
    <string name="battery_saver_setting_default">false</string>

    <string name="particle_count_setting_key">particle_count</string>
    <string name="particle_count_setting_title">Particle Count</string>

    <string name="touch_offset_setting_key">touch_offset</string>
    <string name="touch_offset_setting_title">Home Scroll Parallax</string>
    <string name="touch_offset_setting_default">true</string>

    <string name="motion_parallax_strength_key">motion_parallax_strength</string>
    <string name="motion_parallax_strength_setting_title">Motion Parallax Strength</string>

    <string name="location_setting_key">location_setting</string>
    <string name="location_setting_title">Use Current Location</string>

    <string name="max_volume_pref">Max volume</string>


    //auto time settings
    <string name="auto_time_setting_key">auto_time_key</string>
    <string name="auto_time_setting_title">Automatic Time</string>
    <string name="auto_time_setting_default">true</string>

    <string name="weather_setting_key">weather_setting</string>
    <string name="weather_setting_title">Set Weather</string>

    //time phase settings
    <string name="time_phase_key">set_time_key</string>
    <string name="time_key_automatic">AutomaticTime</string>
    <string name="time_key_early_dawn">EarlyDawn</string>
    <string name="time_key_mid_dawn">MidDawn</string>
    <string name="time_key_late_dawn">LateDawn</string>
    <string name="time_key_day">Day</string>
    <string name="time_key_early_dusk">EarlyDusk</string>
    <string name="time_key_mid_dusk">MidDusk</string>
    <string name="time_key_late_dusk">LateDusk</string>
    <string name="time_key_night">Night</string>

    <string name="time_title_automatic">Automatic</string>
    <string name="time_title_early_dawn">Dawn</string>
    <string name="time_title_mid_dawn">Sunrise</string>
    <string name="time_title_day">Day</string>
    <string name="time_title_mid_dusk">Sunset</string>
    <string name="time_title_late_dusk">Twilight</string>
    <string name="time_title_night">Night</string>

    //scene settings
    <string name="set_scene_key">set_scene_key</string>
    <string name="set_scene_title">Set Scene</string>
    <string name="scene_green">scene_green</string>
    <string name="scene_pink">scene_pink</string>
    <string name="scene_white">scene_white</string>

    //scene settings
    <string name="scene_title_green">scene_green</string>
    <string name="scene_title_pink">scene_pink</string>
    <string name="scene_title_white">scene_white</string>

    //particle enabled setting
    <string name="particle_enabled_title">Enable Particles</string>
    <string name="particle_enabled_key">EnableParticles</string>



    <string name="version_number">Version 0.0.1</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="copyright">Copyright Canvas Hammer Studios 2019</string>




</resources>
