<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="pref_key_sim_scroll"
                        android:title="@string/sim_scrolling"
                        android:summary="@string/sim_scrolling_summary"
                        android:defaultValue="false"/>
    <ListPreference
        android:key="texture_model"
        android:title="@string/texture_choice"
        android:defaultValue="3"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"/>

    <ListPreference
        android:key="camera_blur"
        android:title="Camera Blur"
        android:defaultValue="1"
        android:entries="@array/blurArray"
        android:entryValues="@array/blurValues"/>

        />

    <Preference android:key="view_artist"
                android:title="Go to artists's website">
                <intent android:action="android.intent.action.VIEW"
                        android:data="http://www.soundlesswind.com/" />
    </Preference>

    <CheckBoxPreference android:key="remove_layer"
                        android:title="@string/remove_layer"
                        android:summary="@string/remove_layer_summary"
                        android:defaultValue="false"/>

    <CheckBoxPreference android:key="activate_sunset"
                        android:title="@string/activate_night"
                        android:defaultValue="true"/>

    <Preference android:key="set_wallpaper"
                android:title="@string/set_wallpaper">
    </Preference>



</PreferenceScreen>